# protgeom

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build_test.yaml
docs/: Release.md
source/: conf.py  index.rst
src/protgeom/: bio.py  geom.py  pdb.py
tests/protgeom/: test_geom.py  test_pdb.py
